need to fix display

--- a/index.html
+++ b/index.html
@@ -1,12 +1,24 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>cityStateLookup</title>
 </head>
+
 <body>
-    
+    <h1>City/States Lookup</h1>
+    <form>
+        <label for="statesDropdown">States: </label>
+        <select id="statesDropdown">
+        </select>
+        <br><br>
+        <label for="citiesDropdown">Cities: </label>
+        <select id="citiesDropdown"></select>
+        <br><br>
+    </form>
+    <p id="citiesPara"></p>
+    <p id="statesPara"></p>
+    <script src="scripts/index.js"></script>
 </body>
+
 </html>
