--- a/index.html
+++ b/index.html
@@ -3,21 +3,25 @@
 
 <head>
     <title>cityStateLookup</title>
+    <link rel="stylesheet" href="">
 </head>
 
 <body>
-    <h1>City/States Lookup</h1>
-    <form>
-        <label for="statesDropdown">States: </label>
-        <select id="statesDropdown">
-        </select>
-        <br><br>
-        <label for="citiesDropdown">Cities: </label>
-        <select id="citiesDropdown"></select>
-        <br><br>
-    </form>
-    <p id="citiesPara"></p>
-    <p id="statesPara"></p>
+    <section class="accent-bg">
+        <div id="container">
+            <h1>State & City Lookup</h1>
+            <form>
+                <label for="statesDropdown">States: </label>
+                <select id="statesDropdown">
+                </select>
+                <br><br>
+                <label for="citiesDropdown">Cities: </label>
+                <select id="citiesDropdown"></select>
+                <br><br>
+            </form>
+        </div>
+        <p id="messagePara"></p>
+    </section>
     <script src="scripts/index.js"></script>
 </body>
 
