--- a/index.html
+++ b/index.html
@@ -3,25 +3,26 @@
 
 <head>
     <title>cityStateLookup</title>
-    <link rel="stylesheet" href="">
+    <link rel="stylesheet" href="main.css">
 </head>
 
 <body>
-    <section class="accent-bg">
-        <div id="container">
-            <h1>State & City Lookup</h1>
-            <form>
-                <label for="statesDropdown">States: </label>
-                <select id="statesDropdown">
-                </select>
-                <br><br>
-                <label for="citiesDropdown">Cities: </label>
-                <select id="citiesDropdown"></select>
-                <br><br>
-            </form>
+
+    <h1>State & City Lookup</h1>
+    <form>
+        <div class="sel sel-bg">
+            <label for="statesDropdown" class="">States: </label>
+            <select id="statesDropdown">
+            </select>
+            <br>
+            <label for="citiesDropdown">Cities: </label>
+            <select id="citiesDropdown"></select>
+            <br><br>
         </div>
-        <p id="messagePara"></p>
-    </section>
+    </form>
+
+    <p id="messagePara"></p>
+
     <script src="scripts/index.js"></script>
 </body>
 
